Remove argLine from surefire config in pom.xml